# vc6-docker

./: .dockerignore  .gitignore  Dockerfile  README.md  download-options  setup.bat  vc6-toolchain.cmake
example/: CMakeLists.txt  build.sh  compile.bat
example/include/: hello.h
example/src/: calculator.idl  hello.cpp  main.cpp
tools/: cl.py  link.py  midl.py  winetools.py
vc6_sample_project/: CMakeLists.txt  README.md  build.sh  docker-build.sh  docker-run.sh  run.sh
vc6_sample_project/cmake/: PathConversions.cmake  vc6-toolchain.cmake
vc6_sample_project/include/: sample.h
vc6_sample_project/src/: main.cpp  sample.cpp  sample.idl
vc6_sample_project/tools/: winetools.py
